package Missions_data;

public class Sorcerer {
    private String name;
    private String rank;

    public void setName(String name){
        this.name = name;
    }

    public void setRank(String rank){
        this.rank = rank;
    }

    public String getName() {
        return name;
    }

    public String getRank() {
        return rank;
    }
}
