classDiagram
    class Mission {
        -String missionId
        -String date
        -String location
        -String outcome
        -int damageCost
        -String comment
        +getMissionId() String
        +setMissionId(String)
        +getDate() String
        +setDate(String)
        +getLocation() String
        +setLocation(String)
        +getOutcome() String
        +setOutcome(String)
        +getDamageCost() int
        +setDamageCost(int)
        +getComment() String
        +setComment(String)
        +getView() String
    }

    class Curse {
        -String name
        -String threatLevel
        +getName() String
        +setName(String)
        +getThreatLevel() String
        +setThreatLevel(String)
    }

    class Sorcerer {
        -String name
        -String rank
        +getName() String
        +setName(String)
        +getRank() String
        +setRank(String)
    }

    class Technique {
        -String name
        -String type
        -String owner
        -int damage
        +getName() String
        +setName(String)
        +getType() String
        +setType(String)
        +getOwner() String
        +setOwner(String)
        +getDamage() int
        +setDamage(int)
    }

    class Parser_of_mission {
        <<abstract>>
        +extract_mission(String filepath) Mission*
    }

    class XML_parser {
        -JAXBContext context
        -Unmarshaller unmarshaller
        +XML_parser()
        +extract_mission(String filepath) Mission
    }

    class JSON_parser {
        -ObjectMapper mapper
        +extract_mission(String filepath) Mission
    }

    class TXT_parser {
        +extract_mission(String filename) Mission
    }

    class Files_processing {
        -Parser_of_mission parser_xml
        -Parser_of_mission parser_json
        -Parser_of_mission parser_txt
        -Basic_window window
        +Files_processing(Basic_window)
        +define_type_of_file(String filepath) Mission
        -get_type_based_on_filepath(String) String
        -checking_xml(String) boolean
        +checking_json(String) boolean
        +checking_txt(String) boolean
    }

    class Basic_window {
        -JTextField path_field
        -JButton browse_button
        -JButton parse_button
        -JTextArea result_area
        -Files_processing files_processing
        +Basic_window()
        +show_error_message(String)
    }

    class Main {
        +main(String[] args) void
    }

    Mission "1" *-- "1" Curse
    Mission "1" *-- "0..*" Sorcerer
    Mission "1" *-- "0..*" Technique

    Parser_of_mission <|-- XML_parser
    Parser_of_mission <|-- JSON_parser
    Parser_of_mission <|-- TXT_parser

    Files_processing --> Parser_of_mission
    Files_processing --> Basic_window
    Basic_window --> Files_processing

    Main ..> Basic_window